--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,12 @@
-env: node
+services:
+  - type: web
+    name: strapi
+    env: node
     plan: starter
     buildCommand: yarn install && yarn build
     startCommand: rsync -a public/ /data/public/ && yarn start
     healthCheckPath: /_health
+    autoDeploy: false
     disk:
       name: strapi-data
       mountPath: /data
@@ -19,6 +23,4 @@ env: node
       - key: ADMIN_JWT_SECRET
         generateValue: true
       - key: APP_KEYS
-        generateValue: true
-      - key: API_TOKEN_SALT
         generateValue: true
